[workspace]
members = ["merkrs", "merkrs-py", "merkrs-wasm"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["merkrs"]

resolver = "3"

[workspace.dependencies]
merkrs = { path = "./merkrs"}

approx = "^0.5.1"
criterion = "0.7.0"
csv = "^1.3.1"
ndarray = "^0.16.1"
num_enum = "^0.7.3"
num-traits = "^0.2.19"
numpy = "0.25.0"
pyo3 = "0.25.1"
rand = "^0.9.2"
rayon = "^1.10.0"
rust_decimal = "^1.36.0"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.141"
thiserror = "^2.0.12"
wasm-bindgen = "^0.2.100"

[profile.release]
lto = true           # Enable Link Time Optimization to remove unused code
codegen-units = 1    # Maximize optimization at the cost of slower compilation
panic = 'abort'      # Remove panic handling to reduce binary size
strip = true         # Fully strip debug symbols; debugging in production will be difficult
